tests/baselines/reference/parserModuleDeclaration8.errors.txt
parserModuleDeclaration8.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration8.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration8.ts (2 errors) ====
    module a.number {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }